added feed and lot of changes

--- a/client/src/sass/components/_sendtweet.scss
+++ b/client/src/sass/components/_sendtweet.scss
@@ -1,5 +1,5 @@
 .send-tweet{
-    border: 1px solid $color-grey-2;
+    border-bottom: 1px solid $color-grey-2;
     padding-bottom: 0.5rem;
     border-top: 0;
     .send-tweet-wrap{
