--- a/client/src/sass/components/_tweetsections.scss
+++ b/client/src/sass/components/_tweetsections.scss
@@ -3,8 +3,10 @@
     .tweet-sections {
 
         .tweets {
-            border: 1px solid $color-grey-2;
+            position: relative;
+            // border: 1px solid $color-grey-2;
             margin-top: 0.5rem;
+            margin-bottom: 1rem;
         }
     }
     .searchbar-news-sections-wrap{
