added suggested users

--- a/client/src/sass/components/_whotofollow.scss
+++ b/client/src/sass/components/_whotofollow.scss
@@ -1,5 +1,7 @@
 .who-to-follow-suggestions{
+    position: relative;
     overflow: hidden;
+    min-height: 150px;
     width: 100%;
     height: auto;
     background-color: $color-grey-5;
