--- a/client/src/sass/components/_followuser.scss
+++ b/client/src/sass/components/_followuser.scss
@@ -6,38 +6,45 @@
     border-radius: 50px;
     transition: all 500ms ease-in-out;
     cursor: pointer;
-    
 
+    .wrap-user {
+        @include flexCenter;
+        .profile-pic-container {
+            margin-right: 0.5rem;
 
-    .profile-pic-container {
-        width: 20%;
-
-        .profile-pic {
-            height: 40px;
-            width: 40px;
-            border-radius: 100%;
-            object-fit: cover;
-            background-color: $color-grey-1;
-        }
-    }
-
-    .profile-details {
-        width: 60%;
-        margin-right: 1rem;
-        .user-fullname {
-            display: block;
-            font-weight: 700;
-            &:hover{
-                text-decoration: underline;
+            .profile-pic {
+                height: 40px;
+                width: 40px;
+                border-radius: 100%;
+                object-fit: cover;
+                background-color: $color-grey-1;
             }
         }
 
-        .user-username {
-            color: $color-grey-1;
+        .profile-details {
+            margin-right: 1rem;
+
+            .user-fullname {
+                display: block;
+                font-weight: 700;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+                .verfied-icon{
+                    margin-left: 0.4rem;
+                }
+            }
+
+            .user-username {
+                color: $color-grey-1;
+            }
         }
     }
-    .follow-btn-container{
-        .follow-btn{
+
+    .follow-btn-container {
+        margin-left: auto;
+        .follow-btn {
             background-color: $color-black;
             color: $color-white;
             border-radius: 20px;
@@ -45,10 +52,12 @@
             padding: 0.5rem 1.5rem;
             font-size: 0.8rem;
         }
-        .unfollowBtn{
+
+        .unfollowBtn {
             background-color: transparent;
             color: $color-black;
-            &:hover{
+
+            &:hover {
                 background-color: rgba($color: $color-red, $alpha: 0.2);
                 color: red;
             }
