--- a/client/src/sass/components/_login.scss
+++ b/client/src/sass/components/_login.scss
@@ -19,6 +19,10 @@
         .login-error-message{
             color: $color-red;
             text-align: center;
+            margin-bottom: 0.5rem;
+        }
+        .flow-login-btn{
+            margin-bottom: 1rem;
         }
     }
     .other-login-options{
