--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -55,7 +55,6 @@
         .tweet-content {
             margin-left: 0.5rem;
             flex-grow: 1;
-
             .tweet-content-image-container {
                 margin-top: 1rem;
                 width: 100%;
@@ -165,7 +164,8 @@
             .tweet-text {
                 font-size: 15px;
                 color: $color-black-2;
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-weight: 600;
+                font-family: 'Montserrat', sans-serif;
             }
 
             .user-username,
