--- a/client/src/sass/components/_user.scss
+++ b/client/src/sass/components/_user.scss
@@ -36,7 +36,7 @@
 
                 display: flex;
                 align-items: center;
-                justify-content: end;
+                justify-content: flex-end;
 
                 .edit-profile-btn {
                     max-width: 110px;
@@ -123,6 +123,7 @@
                         }
                     }
                     .active-other-link{
+                        font-weight: 600;
                         border-bottom: 4px solid $color-secondary;
                     }
                 }
