--- a/client/src/sass/components/_sendtweet.scss
+++ b/client/src/sass/components/_sendtweet.scss
@@ -43,6 +43,7 @@
                     // padding: 1rem 0.5rem;
                     flex-grow: 1;
                     height: 100%;
+                    transition: height 100ms ease-in-out;
                     &::placeholder{
                         font-size: 1.2rem;
                         font-weight: 600;
