--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -14,11 +14,13 @@
 @import './components/footer';
 @import './components/signup';
 
+@import './components/notfound';
 @import './components/input';
 @import './components/inputform';
 @import './components/simplespinner';
 @import './components/defaultloading';
 @import './components/desktopheader';
+@import './components/mobileheader';
 @import './components/login';
 @import './components/sendtweet';
 @import './components/sendtweetheader';
