--- a/client/src/sass/layouts/_twocolumns.scss
+++ b/client/src/sass/layouts/_twocolumns.scss
@@ -7,10 +7,17 @@
         width: 55%;
         border: 1px solid $color-grey-2;
         border-top: 0;
+        @include for-tablet-landscape-down{
+            width: 100%;
+        }
     }
 
     .col2 {
+        display: none;
         margin-left: 1rem;
         width: 45%;
+        @include for-tablet-landscape-up{
+            display: block;
+        }
     }
 }
