--- a/client/src/sass/components/_mobileheader.scss
+++ b/client/src/sass/components/_mobileheader.scss
@@ -1,12 +1,15 @@
-.mobile-header{
+.wrap-mobile-header{
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: $color-white;
     z-index: 100;
-    padding: 0.5rem;
+    padding: 0.5rem 0;
     border-top: 1px solid $color-grey-2;
+.mobile-header{
+    width: 80%;
+    margin: auto;
     @include flexCenter;
     justify-content: space-between;
 
@@ -15,4 +18,10 @@
             font-size: 1.3rem;
         }
     }
+    .active-header-link{
+        font-weight: 700;
+        color: $color-secondary-light;
+        fill: $color-secondary-light;
+    }
+}
 }
