--- a/client/src/sass/components/_searchbar.scss
+++ b/client/src/sass/components/_searchbar.scss
@@ -12,6 +12,9 @@
         border-radius: 25px;
         height: 40px;
         width: 350px;
+        @include for-phone-only-500{
+            width: unset;
+        }
         .wrap-search-input {
             flex-grow: 1;
             height: 100%;
