--- a/client/src/sass/layouts/_twocolumns.scss
+++ b/client/src/sass/layouts/_twocolumns.scss
@@ -10,6 +10,9 @@
         @include for-tablet-landscape-down{
             width: 100%;
         }
+        @include for-phone-only-500{
+            margin-top: 3rem;
+        }
     }
 
     .col2 {
