added success error notifications

--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -165,6 +165,9 @@
                 &:hover {
                     border-bottom: 1px solid $color-black-2;
                 }
+                .verfied-icon{
+                    margin-left: 0.5rem;
+                }
             }
 
             .tweet-text {
