--- a/client/src/sass/components/_icobutton.scss
+++ b/client/src/sass/components/_icobutton.scss
@@ -24,3 +24,19 @@
         background-color: $color-grey-2;
     }
 }
+.tweet-round-btn{
+    position: absolute;
+    top: 80%;
+    right: 20px;
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    padding: 0;
+    z-index: 100;
+    .icon-container{
+        @include flexJustifyCenter;
+        color: $color-white;
+    }
+    background-color: $color-secondary-light;
+    
+}
