--- a/client/src/sass/components/_searchbar.scss
+++ b/client/src/sass/components/_searchbar.scss
@@ -8,7 +8,7 @@
     z-index: 99;
     .search-input-label {
         @include flexCenter;
-        background-color: $color-grey-5;
+        background-color: #EFF3F4;
         border-radius: 25px;
         height: 40px;
         width: 350px;
