--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -44,7 +44,7 @@
 @import './pages/tweetpage';
 @import './pages/homepage';
 @import './pages/settingspage';
-
+@import './pages/explorepage';
 
 @import './models/rootmodel';
 @import './models/unfollowmodel';
