--- a/client/src/sass/pages/_explorepage.scss
+++ b/client/src/sass/pages/_explorepage.scss
@@ -2,17 +2,50 @@
     .top-header {
         padding: 0 0.8rem;
         @include flexJustifyBetween;
+
         .explorepage-searchbar {
             width: 90%;
             margin-right: 0.2rem;
-            .search-input-label{
-                 width: 100%;
+
+            .search-input-label {
+                width: 100%;
             }
-           
+
         }
-        .icon-container{
+
+        .icon-container {
             font-size: 1.2rem;
         }
     }
+
+    .nav-links-wrapper {
+        overflow: hidden;
+
+        .nav-links {
+            margin-top: 1rem;
+            // padding: 0 0.8rem;
+            overflow-x: auto;
+            overflow-y: hidden;
+            @include flexCenter;
+
+            .header-link {
+                flex: 1;
+                color: $color-black;
+                white-space: nowrap;
+                padding: 0.7rem;
+            }
+
+            .active-header-link{
+                border-bottom: 4px solid #0056B3;
+            }
+            .active-header-link:hover{
+                background-color: rgba($color: $color-grey-2, $alpha: 0.2) ;
+            }
+        }
+        .nav-links::-webkit-scrollbar{
+            display: none;
+        }
+    }
+
 
 }
