--- a/client/src/sass/pages/_tweetpage.scss
+++ b/client/src/sass/pages/_tweetpage.scss
@@ -21,7 +21,7 @@
             margin-bottom: 3rem;
         }
         .tweetpage-send-tweet{
-            border-top: $color-grey-2 solid 2px;
+            border-top: 1px solid #EFF3F4;
         }
         position: relative;
         height: 100%;
