--- a/client/src/sass/pages/_homepage.scss
+++ b/client/src/sass/pages/_homepage.scss
@@ -15,7 +15,7 @@
             margin-bottom: 5rem;
         }
         .main-wrapper{
-            overflow: auto;
+            // overflow: auto;
             display: flex;
             align-items: flex-start;
             width: 100%;
