--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -21,9 +21,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
-  overflow: hidden;
-}
+// main {
+//   overflow: hidden;
+// }
 
 a {
   color: $color-black;
