--- a/client/src/sass/components/_icobutton.scss
+++ b/client/src/sass/components/_icobutton.scss
@@ -25,7 +25,7 @@
     }
 }
 .tweet-round-btn{
-    position: absolute;
+    position: fixed;
     top: 80%;
     right: 20px;
     height: 50px;
@@ -33,6 +33,7 @@
     border-radius: 100%;
     padding: 0;
     z-index: 100;
+    border: 0;
     .icon-container{
         @include flexJustifyCenter;
         color: $color-white;
