--- a/client/src/sass/components/_icobutton.scss
+++ b/client/src/sass/components/_icobutton.scss
@@ -26,7 +26,7 @@
 }
 .tweet-round-btn{
     position: fixed;
-    top: 80%;
+    bottom: 100px;
     right: 20px;
     height: 50px;
     width: 50px;
