added pagination to feed tweets

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -35,6 +35,7 @@
 @import './components/userheader';
 @import './components/editprofile';
 @import './components/user';
+@import './components/allcaughtup';
 
 @import './pages/composetweetpage';
 @import './pages/bookmarkspage';
