--- a/client/src/sass/components/_tweetsections.scss
+++ b/client/src/sass/components/_tweetsections.scss
@@ -7,6 +7,10 @@
             // border: 1px solid $color-grey-2;
             margin-top: 0.5rem;
             margin-bottom: 5rem;
+            .loading-more-tweets{
+                position: relative;
+                height: 100px;
+            }
         }
     }
     .searchbar-news-sections-wrap{
