--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -46,6 +46,7 @@
 @import './pages/homepage';
 @import './pages/settingspage';
 @import './pages/explorepage';
+@import './pages/searchpage';
 
 @import './models/rootmodel';
 @import './models/unfollowmodel';
