--- a/client/src/sass/components/_user.scss
+++ b/client/src/sass/components/_user.scss
@@ -132,11 +132,13 @@
                     overflow-x:auto ;
                     overflow-y: hidden;
                     .user-link{
+                        position: relative;
                         padding: 0.8rem;
                         transition: background-color 500ms ease-in-out;
                         flex: 1;
                         text-align: center;
                         white-space: nowrap;
+                        
                         @include for-phone-only-500{
                             font-size: 12px;
                         }
@@ -146,7 +148,19 @@
                     }
                     .active-other-link{
                         font-weight: 600;
-                        border-bottom: 4px solid $color-secondary;
+                        .custom-border-bottom{
+                            position: absolute ;
+                            bottom: 0;
+                            left: 50%;
+                            right: 50%;
+                            transform: translate(-50%);
+                            display: block;
+                            width: 50px;
+                            height: 4px;
+                            // margin-top: 0.5rem;
+                            background-color: $color-secondary-light;
+                            border-radius: 10px;
+                        }
                     }
                 }
             }
