added mentions notifications

--- a/client/src/sass/layouts/_twocolumns.scss
+++ b/client/src/sass/layouts/_twocolumns.scss
@@ -12,6 +12,7 @@
         }
         @include for-phone-only-500{
             margin-top: 3rem;
+            margin-bottom: 5rem;
         }
     }
 
