--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -36,6 +36,8 @@
 @import './components/editprofile';
 @import './components/user';
 @import './components/allcaughtup';
+@import './components/mentions';
+@import './components/notification';
 
 @import './pages/composetweetpage';
 @import './pages/bookmarkspage';
