--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -37,6 +37,7 @@
 @import './components/user';
 @import './components/allcaughtup';
 @import './components/mentions';
+@import './components/allnotifications';
 @import './components/notification';
 
 @import './pages/composetweetpage';
