--- a/client/src/sass/pages/_bookmarkspage.scss
+++ b/client/src/sass/pages/_bookmarkspage.scss
@@ -1,6 +1,7 @@
 .bookmarkspage{
     background-color: #fff;
     .bkc-1{
+        position: relative;
         align-self: stretch;
     }
     .bookamark-header{
@@ -8,8 +9,18 @@
         top: 0px;
         background-color: rgba(255, 255, 255, 0.85);
         backdrop-filter: blur(12px);
-        padding: 0 0.5rem;
+        padding: 0.5rem;
+        z-index: 100;
         cursor: pointer;
+        @include flexCenter;
+        .bookmarks-options{
+            margin-left: auto;
+            border-radius: 100%;
+            @include flexJustifyCenter;
+            &:hover{
+                background-color: $color-grey-2;
+            }
+        }
         .bookmarks-text{
             font-size: 1.2rem;
             font-weight: 700;
@@ -18,6 +29,9 @@
             display: block;
             color: $color-grey-1;
         }
+    }
+    .bookmark-loader{
+        position: relative;
     }
     .follow-sugg-news-container{
         .follow-sugg-news-wrap{
