--- a/client/src/sass/components/_searchbar.scss
+++ b/client/src/sass/components/_searchbar.scss
@@ -38,6 +38,8 @@
                 top: calc(100% + 0.5rem);
                 background-color: $color-white;
                 border-radius: 5px;
+                max-height: 300px;
+                overflow: auto;
                 padding: 1rem 0;
                 left: 0;
                 right: 0;
