--- a/client/src/sass/pages/_settingspage.scss
+++ b/client/src/sass/pages/_settingspage.scss
@@ -3,6 +3,10 @@
     .spc-1{
         align-self: stretch;
         width: 40%;
+
+        @include for-phone-only{
+            width: 100%;
+        }
     }
     .settingspage-header{
         position: sticky;
