--- a/client/src/sass/components/_tweet.scss
+++ b/client/src/sass/components/_tweet.scss
@@ -191,6 +191,7 @@
                 .tweet-text {
                     font-size: 15px;
                     color: $color-black-2;
+                    white-space: pre-line;
                     // font-weight: 600;
                     // font-family: 'Montserrat', sans-serif;
                 }
