--- a/client/src/sass/pages/_searchpage.scss
+++ b/client/src/sass/pages/_searchpage.scss
@@ -2,4 +2,37 @@
     .top-tweets{
         position: relative;
     }
+    .nav-links-wrapper {
+        overflow: hidden;
+
+        .nav-links {
+            margin-top: 1rem;
+            overflow-x: auto;
+            overflow-y: hidden;
+            @include flexCenter;
+            border-bottom: 1px solid $color-grey-2;
+
+            .header-link {
+                color: $color-black;
+                font-weight: 600;
+
+                .custom-border-bottom {
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    right: 50%;
+                    transform: translate(-50%);
+                    display: block;
+                    width: 50px;
+                    height: 4px;
+                    // margin-top: 0.5rem;
+                    background-color: $color-secondary-light;
+                    border-radius: 10px;
+                }
+            }
+
+            
+        }
+
+    }
 }
