--- a/client/src/sass/pages/_notificationpage.scss
+++ b/client/src/sass/pages/_notificationpage.scss
@@ -4,10 +4,7 @@
         align-self: stretch;
     }
     .notificationspage-header{
-        position: sticky;
-        top: 0px;
         background-color: rgba(255, 255, 255, 0.85);
-        backdrop-filter: blur(12px);
         padding: 0.5rem;
         padding-top: 0;
         cursor: pointer;
@@ -25,6 +22,11 @@
     .notifications-links{
         @include flexCenter;
         border-bottom: 1px solid $color-grey-2;
+        position: sticky;
+        top: 0px;
+        background-color: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        z-index: 100;
         .user-notification-link{
             flex: 1;
             padding: 0.8rem;
