added email verification

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -50,6 +50,7 @@
 @import './pages/settingspage';
 @import './pages/explorepage';
 @import './pages/searchpage';
+@import './pages/emailverificationpage';
 
 @import './models/rootmodel';
 @import './models/unfollowmodel';
