--- a/client/src/sass/components/_mobileheader.scss
+++ b/client/src/sass/components/_mobileheader.scss
@@ -9,17 +9,20 @@
     border-top: 1px solid $color-grey-2;
 
     .mobile-header {
-        width: 80%;
+        // width: 80%;
         margin: auto;
         @include flexCenter;
-        justify-content: space-between;
+        // justify-content: space-between;
 
         .header-link-icon-wrap {
             .link-icon {
                 font-size: 1.3rem;
             }
         }
-
+        .header-link{
+            flex: 1;
+            text-align: center;
+        }
         .active-header-link {
             font-weight: 700;
             color: $color-secondary-light;
