--- a/client/src/sass/components/_desktopheader.scss
+++ b/client/src/sass/components/_desktopheader.scss
@@ -1,243 +1,238 @@
 .desktop-header {
-    position: relative;
+  position: relative;
+  height: 100%;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 1.3rem;
+  z-index: 99;
+  @include for-big-desktop-down {
+    width: 10%;
+    align-items: center;
+  }
+  .sidebar {
+    position: fixed;
+    background-color: #fff;
     height: 100%;
-    width: 25%;
+    flex: 1;
+    width: 270px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    font-size: 1.3rem;
-    z-index: 99;
-    @include for-big-desktop-down{
-        width: 10%;
+    @include for-big-desktop-down {
+      width: 50px;
+    }
+    .header-logo-container {
+      .twitter-logo-container {
+        display: inline-block;
+        padding: 0 0.5rem;
+        cursor: pointer;
+      }
+
+      .fa-twitter {
+        font-size: 2rem;
+      }
+    }
+
+    .header-link {
+      display: block;
+      margin: 0.5rem 0;
+
+      &:hover .header-link-icon-wrap {
+        background-color: $color-grey-2;
+      }
+
+      .header-link-icon-wrap {
+        display: inline-flex;
         align-items: center;
+        transition: background-color 500ms ease-in-out;
+        padding: 0.5rem 0.7rem 0.5rem 0.5rem;
+        border-radius: 20px;
+        cursor: pointer;
+      }
+
+      .link-icon {
+        @include flexJustifyCenter;
+        margin-right: 1rem;
+        font-size: 1.5rem;
+        width: 26px;
+        height: 26px;
+      }
+      .link-text {
+        @include for-big-desktop-down {
+          display: none;
+        }
+      }
     }
-    .sidebar {
-        position: fixed;
+
+    .more-options-container {
+      position: relative;
+
+      .more-options {
+        position: absolute;
+        background-color: $color-white;
+        bottom: 0;
+        box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px,
+          rgb(101 119 134 / 15%) 0px 0px 3px 1px;
+        min-width: 200px;
+        z-index: 99;
+        .more-options-link {
+          display: block;
+          padding: 1rem;
+          font-size: 15px;
+          color: $color-black-2;
+          transition: all 500ms ease-in-out;
+          &:hover {
+            background-color: rgb($color-grey-2, 0.5);
+          }
+          .icon-container {
+            margin-right: 0.8rem;
+          }
+        }
+      }
+      .show {
+        display: block;
+      }
+    }
+
+    .active-header-link {
+      .header-link-icon-wrap {
+        font-weight: 700;
+      }
+    }
+
+    .activeRoute {
+      background-color: #333;
+    }
+
+    .header-container {
+      margin-bottom: 1rem;
+
+      &:focus-within + .logout-options {
+        display: block;
+      }
+    }
+
+    .tweet-btn-container {
+      .tweet-btn {
+        width: 90%;
+        margin: 0;
+        font-size: large;
+        background-color: $color-secondary-light;
+        color: $color-white;
+        @include for-big-desktop-down {
+          display: none;
+        }
+      }
+    }
+
+    .header-profile-wrap {
+      margin-top: auto;
+      position: relative;
+
+      .logout-options {
+        cursor: auto;
+        position: absolute;
+        bottom: calc(100% + 20px);
+        width: calc(100% + 2rem);
+        transform: translate(-50%);
+        // left: 50%;
+        height: auto;
         background-color: #fff;
-        height: 100%;
-        flex: 1;
-        width: 270px;
-        display: flex;
-        flex-direction: column;
-        @include for-big-desktop-down{
-            width: 50px;
+        border-radius: 10px;
+        padding: 0.5rem;
+        align-items: flex-start;
+        z-index: 10;
+        box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px,
+          rgb(101 119 134 / 15%) 0px 0px 3px 1px;
+        @include for-big-desktop-down {
+          left: unset;
+          transform: none;
+          min-width: 200px;
         }
-        .header-logo-container {
-            .twitter-logo-container {
-                display: inline-block;
-                padding: 0 0.5rem;
-                cursor: pointer;
-            }
+        .logout-btn-container {
+          @include flexJustifyCenter;
 
-            .fa-twitter {
-                font-size: 2rem;
-            }
-        }
-
-        .header-link {
-            display: block;
-            margin: 0.5rem 0;
-
-            &:hover .header-link-icon-wrap {
-                background-color: $color-grey-2;
-            }
-
-            .header-link-icon-wrap {
-                display: inline-flex;
-                align-items: center;
-                transition: background-color 500ms ease-in-out;
-                padding: 0.5rem 0.7rem 0.5rem 0.5rem;
-                border-radius: 20px;
-                cursor: pointer;
-
-            }
-
-
-            .link-icon {
-                @include flexJustifyCenter;
-                margin-right: 1rem;
-                font-size: 1.5rem;
-                width: 26px;
-                height: 26px;
-            }
-            .link-text{
-                @include for-big-desktop-down{
-                    display: none;
-                }
-            }
-        }
-
-        .more-options-container {
-            position: relative;
-
-            .more-options {
-                position: absolute;
-                background-color: $color-white;
-                bottom: 0;
-                box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
-                min-width: 200px;
-                z-index: 99;
-                .more-options-link {
-                    display: block;
-                    padding: 1rem;
-                    font-size: 15px;
-                    color: $color-black-2;
-                    transition: all 500ms ease-in-out;
-                    &:hover{
-                        background-color: rgb($color-grey-2,0.5);
-                    }
-                    .icon-container{
-                        margin-right: 0.8rem;
-                    }
-                }
-            }
-            .show{
-                display: block;
-            }
-        }
-
-        .active-header-link {
-            .header-link-icon-wrap {
-                font-weight: 700;
-            }
-        }
-
-
-        .activeRoute {
-            background-color: #333;
-        }
-
-        .header-container {
-            margin-bottom: 1rem;
-
-            &:focus-within+.logout-options {
-                display: block;
-            }
-        }
-
-        .tweet-btn-container {
-            .tweet-btn {
-                width: 90%;
-                margin: 0;
-                font-size: large;
-                background-color: $color-secondary-light;
-                color: $color-white;
-                @include for-big-desktop-down{
-                    display: none;
-                }
-            }
-        }
-
-        .header-profile-wrap {
-            margin-top: auto;
-            position: relative;
-
-            .logout-options {
-                display: none;
-                cursor: auto;
-                position: absolute;
-                bottom: calc(100% + 20px);
-                width: calc(100% + 2rem);
-                transform: translate(-50%);
-                left: 50%;
-                height: auto;
-                background-color: #fff;
-                border-radius: 10px;
-                padding: 0.5rem;
-                align-items: flex-start;
-                z-index: 10;
-                box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
-                @include for-big-desktop-down{
-                    left: unset;
-                    transform: none;
-                    min-width: 200px;
-                }
-                .logout-btn-container {
-                    @include flexJustifyCenter;
-
-                    .logout-btn {
-                        width: unset;
-                        margin: 0;
-                        border: 0;
-                        min-height: unset;
-                        flex: 1;
-                        &:hover {
-                            background-color: $color-grey-2;
-                        }
-                    }
-                }
-
-            }
-
-            .show {
-                padding: 0;
-                display: block;
-                @include for-big-desktop-down{
-                    .profile-details{
-                        display: block;
-                    }
-                }
-                .header-profile {
-                    pointer-events: none;
-                    border-bottom: 1px solid $color-grey-2;
-                    border-radius: 0;
-                    padding: 1rem;
-                }
-            }
-        }
-
-        .header-profile {
-            // outline: 0;
-            // background-color: transparent;
-            // border: 0;
-            @include flexCenter;
-            font-size: 14px;
-            padding: 0.5rem;
-            height: auto;
-            border-radius: 50px;
-            transition: all 500ms ease-in-out;
-            cursor: pointer;
-
+          .logout-btn {
+            width: unset;
+            margin: 0;
+            border: 0;
+            min-height: unset;
+            flex: 1;
             &:hover {
-                background-color: $color-grey-2;
+              background-color: $color-grey-2;
             }
-
-            .profile-pic-container {
-                margin-right: 1rem;
-                width: 20%;
-
-                .profile-pic {
-                    height: 40px;
-                    width: 40px;
-                    border-radius: 100%;
-                    object-fit: cover;
-                    background-color: $color-grey-1;
-                }
-            }
-
-            .profile-details {
-                width: 60%;
-                margin-right: 1rem;
-                @include for-big-desktop-down{
-                    display: none;
-                }
-                .user-fullname {
-                    font-weight: 700;
-                }
-
-                .user-username {
-                    color: $color-grey-1;
-                }
-            }
-
-            .profile-options {
-                width: 20%;
-                @include for-big-desktop-down{
-                    display: none;
-                }
-            }
+          }
         }
+      }
+
+      .show {
+        padding: 0;
+        display: block;
+        @include for-big-desktop-down {
+          .profile-details {
+            display: block;
+          }
+        }
+        .header-profile {
+          pointer-events: none;
+          border-bottom: 1px solid $color-grey-2;
+          border-radius: 0;
+          padding: 1rem;
+        }
+      }
     }
 
+    .header-profile {
+      // outline: 0;
+      // background-color: transparent;
+      // border: 0;
+      @include flexCenter;
+      font-size: 14px;
+      padding: 0.5rem;
+      height: auto;
+      border-radius: 50px;
+      transition: all 500ms ease-in-out;
+      cursor: pointer;
 
+      &:hover {
+        background-color: $color-grey-2;
+      }
+
+      .profile-pic-container {
+        margin-right: 1rem;
+        width: 20%;
+
+        .profile-pic {
+          height: 40px;
+          width: 40px;
+          border-radius: 100%;
+          object-fit: cover;
+          background-color: $color-grey-1;
+        }
+      }
+
+      .profile-details {
+        width: 60%;
+        margin-right: 1rem;
+        @include for-big-desktop-down {
+          display: none;
+        }
+        .user-fullname {
+          font-weight: 700;
+        }
+
+        .user-username {
+          color: $color-grey-1;
+        }
+      }
+
+      .profile-options {
+        width: 20%;
+        @include for-big-desktop-down {
+          display: none;
+        }
+      }
+    }
+  }
 }
